Include basic privacy policy for Music Stacks

--- a/musicstacks/index.html
+++ b/musicstacks/index.html
@@ -102,8 +102,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Music Stacks. All rights reserved.</p>
-            <p>Apple Music integration requires an active Apple Music subscription.</p>
+            <p>&copy; 2025 Denim Dog LLC. All rights reserved.</p>
+            <p><a href="privacy.html" style="color: #007AFF; text-decoration: none;">Privacy Policy</a></p>
         </div>
     </footer>
 </body>
