--- a/musicstacks/index.html
+++ b/musicstacks/index.html
@@ -102,8 +102,13 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Denim Dog LLC. All rights reserved.</p>
-            <p><a href="privacy.html" style="color: #007AFF; text-decoration: none;">Privacy Policy</a></p>
+            <p>&copy; 2025 Denim Dog LLC</p>
+            <p>
+                <a href="privacy.html" style="color: #007AFF; text-decoration: none;">Privacy Policy</a>
+                &nbsp;•&nbsp;
+                <a href="terms.html" style="color: #007AFF; text-decoration: none;">Terms</a>
+            </p>
+            <p>Apple Music is a trademark of Apple Inc., registered in the U.S. and other countries.</p>
         </div>
     </footer>
 </body>
